main menu estruturado

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
         <h2>A revolução do Google está chegando</h2>
       </section class="hgroup">
       <img src="_imagens/glass-oculos-preto-peq.png" alt="Óculos google glass preto">
-      
-      Menu Principal
-      - Home
-      - Especificações
-      - Fotos
-      - Multimídia
-      - Fale conosco
+      <nav>
+        <h1>Menu Principal</h1>
+        <ul>
+          <li>Home</li>
+          <li>Especificações</li>
+          <li>Fotos</li>
+          <li>Multimídia</li>
+          <li>Fale conosco</li>
+        </ul>
+      </nav>
     </header>
     <section class="hgroup">
       <h3>Tecnologia > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Inovações</h3>
