--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>A revolução do Google está chegando</h2>
       </section class="hgroup">
       <img src="_imagens/glass-oculos-preto-peq.png" alt="Óculos google glass preto">
-      <nav>
+      <nav class="menu">
         <h1>Menu Principal</h1>
         <ul>
           <li><a href="index.html">Home</a></li>
