--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Google Glass</h1>
         <h2>A revolução do Google está chegando</h2>
       </section class="hgroup">
-      <img src="_imagens/glass-oculos-preto-peq.png" alt="Óculos google glass preto">
+      <img class="oculos-pequeno" id="icone" src="_imagens/glass-oculos-preto-peq.png" alt="Óculos google glass preto">
       <nav class="menu">
         <h1>Menu Principal</h1>
         <ul>
