footer configurado com links

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       </p>
     </aside>
     <footer class="rodape">
-      <p>Copyright &copy; 2013 - by Gustavo Guanabara</p>
-      <p>Facebook | Twitter</p>
+      <p>Copyright &copy; 2013 - by Gustavo Guanabara<br>
+        <a href="https://facebook.com/cursoemvideo" target="_blank">Facebook</a> | <a href="https://twitter.com/cursoemvideo" target="_blank">Twitter</a></p>
     </footer>
   </div>
 </body>
