--- a/google-glass.html
+++ b/google-glass.html
@@ -4,42 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>informações sobre o Google Glass</title>
-  <style>
-
-    body {
-      font-family: Arial, sans-serif;
-      font-size: 10pt;
-    }
-
-    p {
-      text-align: justify;
-      text-indent: 20px;
-    }
-
-    article {
-      margin-bottom: 1000px;
-    }
-
-    article h1 {
-      font-size: 15pt;
-      color: rgb(255 , 255 , 255);
-      background-color: rgba(0 , 0 , 0 , 0.4);
-      padding: 5px;
-      margin: 0;
-    }
-
-    article h2 {
-      font-size: 13pt;
-      color: rgb(136 , 136 , 136);
-      margin: 0;
-    }
-
-    .img-direita {
-      display: block;
-      float: right;
-      margin-left: 5px;
-    }
-  </style>
+  <link rel="stylesheet" href="_css/google-glass.css">
 </head>
 <body>
   <article id="topo">
@@ -54,7 +19,7 @@
       <h2>Como o mundo vai aparecer</h2>
     </header>
     <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça.</p>
-    <img src="_imagens/det-]" alt="Tela do Google Glass">
+    <img src="_imagens/det-tela.jpg" alt="Tela do Google Glass">
   </article>
   <article id="camera">
     <header>
