--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <section class="container">
       <article>
-        <header id="cabecalho-artigo">
+        <header class="cabecalho-artigo">
           <section class="hgroup">
             <h3>Tecnologia > Inovações</h3>
             <h1>Saiba tudo sobre o Google Glass</h1>
