--- a/specs.html
+++ b/specs.html
@@ -43,7 +43,13 @@
         <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
         
         <section class="content">
-          <img src="_imagens/glass-esquema-marcado.jpg" alt="Google Glass com partes interativas">
+          <img src="_imagens/glass-esquema-marcado.jpg" alt="Google Glass com partes interativas" usemap="#mymap">
+          <map name="mymap">
+            <area shape="rect" coords="179 , 202 , 270 , 260" href="google-glass.html#tela" target="window" alt="area interativa tela do google-glass">
+            <area shape="circle" coords="158 , 243 , 12" href="google-glass.html#camera" target="window" alt="area interativa gadgets e camera do google-glass">
+            <area shape="circle" coords="73 , 52 , 12" href="google-glass.html#bateria" target="window" alt="area interativa bateria do google-glass">
+            <area shape="poly" coords="28 , 143 , 83 , 216 , 84 ,249 , 27 ,169" href="google-glass.html#sensores" target="window" alt="area interativa sensores google-glass">
+          </map>
           <iframe src="google-glass.html" name="window" class="frame-spec"></iframe>
         </section>
       
