--- a/fotos.html
+++ b/fotos.html
@@ -45,12 +45,12 @@
         <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
         
         <ul class="photo-album">
-          <li id="photo01"><spam>Agenda e lembretes</spam></li>
-          <li id="photo02"><spam>Sergey Brin usando o Glass</spam></li>
-          <li id="photo03"><spam>Leve e compacto</spam></li>
-          <li id="photo04"><spam>Sensação de uma tela de 50"</spam></li>
-          <li id="photo05"><spam>Vários tipos de lente</spam></li>
-          <li id="photo06"><spam>Informações importantes</spam></li>
+          <li class="photo01"><span>Agenda e lembretes</span></li>
+          <li class="photo02"><span>Sergey Brin usando o Glass</span></li>
+          <li class="photo03"><span>Leve e compacto</span></li>
+          <li class="photo04"><span>Sensação de uma tela de 50"</span></li>
+          <li class="photo05"><span>Vários tipos de lente</span></li>
+          <li class="photo06"><span>Informações importantes</span></li>
         </ul>
       </article>
     </section>
