--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tudo sobre o Google Glass</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
-<script src="javascript/funcoes.js"></script>
+<script src="/javascript/funcoes.js"></script>
 <body>
   <div class="interface">
     <header class="cabecalho">
